usagov-1821-icon-resize: Added min hight to address issue with shifting height on btn hover

--- a/web/themes/custom/usagov/sass/_benefits-block.scss
+++ b/web/themes/custom/usagov/sass/_benefits-block.scss
@@ -31,6 +31,7 @@
     grid-template-areas:
     "icon text button";
     grid-template-columns: auto 1fr auto;
+    min-height: 60px;
   }
 }
 
